# today-puzzle

./: Cargo.toml  Justfile  README.md  count_solutions.txt  first_solutions.txt  index.html
.github/workflows/: build.yml  deploy.yml
benches/: bitpiece_bench.rs
examples/: today-is.rs
pkg/: today_puzzle.js  today_puzzle_bg.wasm
public/: index.html
src/: bitboard.rs  bitpiece.rs  board.rs  lib.rs  main.rs  piece.rs  variants.rs  wasm.rs
